--- a/index.html
+++ b/index.html
@@ -10,13 +10,32 @@
       <header>
         <strong>$35</strong>
         <span>In stock</span>
-        <img src="images/placeholder-4by3.svg" alt="" />
-        <dl class="">
-          <dt>Ages:</dt><dd>8+</dd>
-          <dt>Number players:</dt><dd>2-5</dd>
-          <dt>Length:</dt><dd>45 min</dd>
-        </dl>
       </header>
+      <img src="images/placeholder-4by3.svg" alt="" />
+      <dl class="">
+        <dt>Ages:</dt><dd>8+</dd>
+        <dt>Number players:</dt><dd>2-5</dd>
+        <dt>Length:</dt><dd>45 min</dd>
+      </dl>
+      <h2>Average Rating:</h2><meter min="0" max="5" value="4">
+        <a href="#">[Add to Whishlist!]</a>
+        <a href="#">[Add to Cart]</a>
+        <p>You’re an ancient Egyptian God competing against the other gods to create the perfect landscape for your subjugated peoples. You and the gods adjust the landscape to best suit your people, building farms, rivers, cities, villages—and places of worship. The god with the best—most loved—landscape wins and claims the whole land.</p>
+        <p>Super Epic Tile Layer is a tile-placement game where players draw a random tile and place the piece to continue the beautiful landscape of the Nile and Nile delta. Each tile must seamlessly continue the landscape while getting victory points by claiming important pieces of countryside and locations.</p>
+        <footer>
+          <dt>Status:</dt><dd>In print</dd>
+          <dt>Categories:</dt>
+            <dd>
+              <ol>
+                <li>Area Control,</li>
+                <li>Educational,</li>
+                <li>Historical,</li>
+                <li>Light Strategy,</li>
+                <li>Puzzle,</li>
+                <li>Tile Placement,</li>
+              </ol>
+            </dd>
+        </footer>
     </article>
 </body>
 </html>
