--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     </header>
     <img src="images/placeholder-4by3.svg" alt="" />
     <dl>
-      <dt>Ages:</dt><dd>8+</dd>
-      <dt>Number players:</dt><dd>2-5</dd>
-      <dt>Length:</dt><dd>45 min</dd>
+      <dt>Ages:</dt>
+      <dd>8+</dd>
+      <dt>Number players:</dt>
+      <dd>2-5</dd>
+      <dt>Length:</dt>
+      <dd>45 min</dd>
     </dl>
     <h2>Average Rating:</h2><meter min="0" max="5" value="4">4/5</meter>
       <a href="#">[Add to Whishlist!]</a>
@@ -24,7 +27,8 @@
       <p>Super Epic Tile Layer is a tile-placement game where players draw a random tile and place the piece to continue the beautiful landscape of the Nile and Nile delta. Each tile must seamlessly continue the landscape while getting victory points by claiming important pieces of countryside and locations.</p>
       <footer>
         <dl>
-          <dt>Status:</dt><dd>In print</dd>
+          <dt>Status:</dt>
+          <dd>In print</dd>
           <dt>Categories:</dt>
             <dd>
               <ol>
@@ -37,9 +41,12 @@
                 <li>Worker Placement</li>
               </ol>
             </dd>
-          <dt>Publisher:</dt><dd>AwesomeSpiel</dd>
-          <dt>Designer:</dt><dd>Kerstin Eichelberger</dd>
-          <dt>Year:</dt><dd>2011</dd>
+          <dt>Publisher:</dt>
+          <dd>AwesomeSpiel</dd>
+          <dt>Designer:</dt>
+          <dd>Kerstin Eichelberger</dd>
+          <dt>Year:</dt>
+          <dd>2011</dd>
           <dt>Awards:</dt>
             <dd>
               <ul>
