--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <dt>Length:</dt>
       <dd>45 min</dd>
     </dl>
-    <h2>Average Rating:</h2><meter min="0" max="5" value="4">4/5</meter>
+    <h2>Average Rating:</h2>
+    <meter min="0" max="5" value="4">4/5</meter>
       <a href="#">[Add to Whishlist!]</a>
       <a href="#">[Add to Cart]</a>
       <p>You’re an ancient Egyptian God competing against the other gods to create the perfect landscape for your subjugated peoples. You and the gods adjust the landscape to best suit your people, building farms, rivers, cities, villages—and places of worship. The god with the best—most loved—landscape wins and claims the whole land.</p>
